--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/fontawesome-svg-core": "1.2.22",
     "@fortawesome/free-solid-svg-icons": "5.10.2",
     "@fortawesome/react-native-fontawesome": "0.1.0",
+    "@ui-kitten/eva-icons": "^4.2.0",
     "axios": "0.19.0",
     "lodash": "4.17.15",
     "moment": "2.24.0",
@@ -29,23 +30,22 @@
     "react-native-gesture-handler": "1.5.3",
     "react-native-gifted-chat": "0.13.0",
     "react-native-google-signin": "2.0.0",
-    "react-native-maps": "0.25.0",
+    "react-native-image-picker": "^1.1.0",
+    "react-native-keyboard-aware-scroll-view": "0.9.1",
+    "react-native-maps": "^0.16.4",
     "react-native-reanimated": "1.2.0",
     "react-native-screens": "1.0.0-alpha.22",
     "react-native-svg": "9.13.6",
+    "react-native-timer": "^1.3.6",
     "react-native-ui-kitten": "4.3.2",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "4.0.10",
+    "react-navigation-drawer": "^2.3.1",
     "react-navigation-stack": "1.5.3",
     "react-redux": "7.1.3",
     "redux": "4.0.4",
     "redux-saga": "1.1.3",
-    "react-native-keyboard-aware-scroll-view": "0.9.1",
-    "uuid": "^3.3.2",
-    "react-navigation-drawer": "^2.3.1",
-    "react-native-image-picker": "^1.1.0",
-    "react-native-timer": "^1.3.6",
-    "@ui-kitten/eva-icons": "^4.2.0"
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.6.0",
@@ -53,6 +53,7 @@
     "@react-native-community/eslint-config": "^0.0.5",
     "babel-jest": "^24.9.0",
     "eslint": "^6.3.0",
+    "ignite-maps": "^1.0.1",
     "jest": "^24.9.0",
     "metro-react-native-babel-preset": "^0.57.0",
     "react-test-renderer": "16.8.6"
